--- a/src/montoitfleurus/theme/static/css/style.css
+++ b/src/montoitfleurus/theme/static/css/style.css
@@ -1,21 +1,420 @@
-/*
-Site pour Mon Toit Fleurusien CSS BY AFFINITIC
-*/
+@font-face {
+font-family: 'mondaregular';
+src: url('font/monda-regular-webfont.eot');
+src: url('font/monda-regular-webfont.eot?#iefix') format('embedded-opentype'),
+     url('font/monda-regular-webfont.woff') format('woff'),
+     url('font/monda-regular-webfont.ttf') format('truetype'),
+     url('font/monda-regular-webfont.svg#mondaregular') format('svg');
+font-weight: normal;
+font-style: normal;
+}
+html{
+background: rgb(181,189,200); /* Old browsers */
+background: -moz-radial-gradient(center, ellipse cover,  rgba(181,189,200,1) 0%, rgba(130,140,149,1) 36%, rgba(40,52,59,1) 100%); /* FF3.6+ */
+background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(0%,rgba(181,189,200,1)), color-stop(36%,rgba(130,140,149,1)), color-stop(100%,rgba(40,52,59,1))); /* Chrome,Safari4+ */
+background: -webkit-radial-gradient(center, ellipse cover,  rgba(181,189,200,1) 0%,rgba(130,140,149,1) 36%,rgba(40,52,59,1) 100%); /* Chrome10+,Safari5.1+ */
+background: -o-radial-gradient(center, ellipse cover,  rgba(181,189,200,1) 0%,rgba(130,140,149,1) 36%,rgba(40,52,59,1) 100%); /* Opera 12+ */
+background: -ms-radial-gradient(center, ellipse cover,  rgba(181,189,200,1) 0%,rgba(130,140,149,1) 36%,rgba(40,52,59,1) 100%); /* IE10+ */
+background: radial-gradient(ellipse at center,  rgba(181,189,200,1) 0%,rgba(130,140,149,1) 36%,rgba(40,52,59,1) 100%); /* W3C */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#b5bdc8', endColorstr='#28343b',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
+background-attachment:fixed;
+}
 
-#left-column{
+body{
+background-color:transparent;
+font-family:'mondaregular', sans-serif;
+font-size:12pt;
+color:#777;
+margin:0px;
+margin-top:10px;
+}
+
+
+.stop-float{
+clear:both;
+}
+
+.image-float-left{
 float:left;
-width:20%;
-margin-left:20px;
+margin:0px 7px 7px 0px;
 }
 
-#main-column{
-float:right;
-width:75%;
-margin-right:20px;
+.rouge-fleurus{
+color:#9d0003;
 }
 
-#main-column-large {
-float:none;
-width:95%;
+.blanc{
+color:#fff;
+}
+
+.gras{
+font-weight:bold;
+}
+
+#wrapper{
+width:1200px;
+min-height:700px;
 margin:auto;
+background-color:transparent;
+border-left:2px solid #555;
+border-right:2px solid #555;
+border-radius:18px;
+box-shadow:8px 0px 16px rgba(50,50,50,0.7),
+           -8px 0px 16px rgba(50,50,50,0.7);
 }
+
+header{
+height:140px;
+padding:0px 1em;
+color:#fff;
+border-radius:18px 18px 0px 0px;
+background: rgb(220,220,220); /* Old browsers */
+background: -moz-linear-gradient(top,  rgba(220,220,220,1) 0%, rgba(185,185,185,1) 100%); /* FF3.6+ */
+background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(220,220,220,1)), color-stop(100%,rgba(185,185,185,1))); /* Chrome,Safari4+ */
+background: -webkit-linear-gradient(top,  rgba(220,220,220,1) 0%,rgba(185,185,185,1) 100%); /* Chrome10+,Safari5.1+ */
+background: -o-linear-gradient(top,  rgba(220,220,220,1) 0%,rgba(185,185,185,1) 100%); /* Opera 11.10+ */
+background: -ms-linear-gradient(top,  rgba(220,220,220,1) 0%,rgba(185,185,185,1) 100%); /* IE10+ */
+background: linear-gradient(to bottom,  rgba(220,220,220,1) 0%,rgba(185,185,185,1) 100%); /* W3C */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#dcdcdc', endColorstr='#b9b9b9',GradientType=0 ); /* IE6-9 */
+}
+
+#portal-logo{
+float:left;
+width:86px;
+height:87px;
+margin-left:15px;
+margin-top:15px;
+background-image:url(../images/logo.png);
+background-repeat:no-repeat;
+background-position:left center;
+line-height:87px;
+padding-left:0px;
+font-size:1.2em;
+}
+
+#portal-logo img{
+display:none;
+}
+
+#portal-titre{
+position:relative;
+top:55px;
+left:5px;
+}
+
+#portal-siteactions{
+position:relative;
+top:-115px;
+}
+
+#portal-siteactions li{
+display:inline;
+margin:0px 6px;
+}
+
+#portal-siteactions a{
+display:inline-block;
+width:130px;
+height:20px;
+line-height:20px;
+border:1px solid #bbb;
+border-radius:18px;
+font-size:0.8em;
+text-decoration:none;
+text-align:center;
+color:#888;
+}
+
+#portal-siteactions a:hover{
+color:#9d0003;
+background-color:#eee;
+}
+
+#personal-tools{
+position:relative;
+top:-170px;
+left:975px;
+width:150px;
+}
+
+#portal-personaltools.actionMenu{
+width:100px;
+text-align:center;
+}
+
+hr#border-personal-tools{
+position:relative;
+top:-162px;
+left:980px;
+width:180px;
+margin:8px 0px 9px 0px;
+border: 0;
+height: 1px;
+background: -moz-linear-gradient(left,  rgba(0,0,0,0) 0%, rgba(0,0,0,0.75) 50%, rgba(0,0,0,0) 100%); /* FF3.6+ */
+background: -webkit-gradient(linear, left top, right top, color-stop(0%,rgba(0,0,0,0)), color-stop(50%,rgba(0,0,0,0.75)), color-stop(100%,rgba(0,0,0,0))); /* Chrome,Safari4+ */
+background: -webkit-linear-gradient(left,  rgba(0,0,0,0) 0%,rgba(0,0,0,0.75) 50%,rgba(0,0,0,0) 100%); /* Chrome10+,Safari5.1+ */
+background: -o-linear-gradient(left,  rgba(0,0,0,0) 0%,rgba(0,0,0,0.75) 50%,rgba(0,0,0,0) 100%); /* Opera 11.10+ */
+background: -ms-linear-gradient(left,  rgba(0,0,0,0) 0%,rgba(0,0,0,0.75) 50%,rgba(0,0,0,0) 100%); /* IE10+ */
+background: linear-gradient(to right,  rgba(0,0,0,0) 0%,rgba(0,0,0,0.75) 50%,rgba(0,0,0,0) 100%); /* W3C */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', endColorstr='#00000000',GradientType=1 ); /* IE6-9 */
+}
+
+
+#search-engine{
+position:relative;
+left:670px;
+top:-125px;
+width:300px;
+height:50px;
+text-align:center;
+border:1px solid #999;
+border-radius:18px;
+}
+
+#main-content{
+background: rgb(255,255,255); /* Old browsers */
+background: -moz-linear-gradient(top,  rgba(255,255,255,1) 0%, rgba(246,246,246,1) 47%, rgba(237,237,237,1) 100%); /* FF3.6+ */
+background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(255,255,255,1)), color-stop(47%,rgba(246,246,246,1)), color-stop(100%,rgba(237,237,237,1))); /* Chrome,Safari4+ */
+background: -webkit-linear-gradient(top,  rgba(255,255,255,1) 0%,rgba(246,246,246,1) 47%,rgba(237,237,237,1) 100%); /* Chrome10+,Safari5.1+ */
+background: -o-linear-gradient(top,  rgba(255,255,255,1) 0%,rgba(246,246,246,1) 47%,rgba(237,237,237,1) 100%); /* Opera 11.10+ */
+background: -ms-linear-gradient(top,  rgba(255,255,255,1) 0%,rgba(246,246,246,1) 47%,rgba(237,237,237,1) 100%); /* IE10+ */
+background: linear-gradient(to bottom,  rgba(255,255,255,1) 0%,rgba(246,246,246,1) 47%,rgba(237,237,237,1) 100%); /* W3C */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#ededed',GradientType=0 ); /* IE6-9 */
+}
+
+#content-text{
+float:left;
+width:917px;
+min-height:300px;
+border-right:1px solid #ddd;
+
+}
+
+#content-text h1{
+font-size:1.8em;
+padding-bottom:5px;
+border-bottom:1px dotted rgba(50,50,50,0.3);
+}
+
+#deco-sup{
+width:914px;
+height:215px;
+background-image:url(../images/banner.jpg);
+background-repeat:no-repeat;
+}
+
+#menu-sup{
+}
+
+.section-nav-sup{
+float:left;
+margin:1px 1px 0px 1px;
+width:303px;
+min-height:200px;
+}
+
+.section-nav-sup h2{
+height:40px;
+line-height:35px;
+color:#fff;
+font-style:uppercase;
+font-size:1.1em;
+border-bottom:2px solid #fcbf4a;
+margin:0px;
+padding-left:20px;
+background: rgb(125,126,125); /* Old browsers */
+background: -moz-linear-gradient(top,  rgba(125,126,125,1) 0%, rgba(14,14,14,1) 100%); /* FF3.6+ */
+background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(125,126,125,1)), color-stop(100%,rgba(14,14,14,1))); /* Chrome,Safari4+ */
+background: -webkit-linear-gradient(top,  rgba(125,126,125,1) 0%,rgba(14,14,14,1) 100%); /* Chrome10+,Safari5.1+ */
+background: -o-linear-gradient(top,  rgba(125,126,125,1) 0%,rgba(14,14,14,1) 100%); /* Opera 11.10+ */
+background: -ms-linear-gradient(top,  rgba(125,126,125,1) 0%,rgba(14,14,14,1) 100%); /* IE10+ */
+background: linear-gradient(to bottom,  rgba(125,126,125,1) 0%,rgba(14,14,14,1) 100%); /* W3C */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#7d7e7d', endColorstr='#0e0e0e',GradientType=0 ); /* IE6-9 */
+}
+
+.section-nav-sup p{
+color:#fff;
+font-size:0.8em;
+padding:1em;
+}
+
+#presentation-sup{
+background-color:#637e99;
+}
+
+#devenir-locataire-sup{
+background-color:#7fa0c3;
+}
+
+#etre-locataire-sup{
+background-color:#93bae3;
+}
+
+#news-event{
+margin:15px 4px 15px 4px;
+}
+
+#actualite,
+#evenement{
+width:430px;
+min-height:150px;
+padding:10px;
+background: -moz-linear-gradient(-45deg,  rgba(198,196,197,0.5) 0%, rgba(127,125,126,0) 36%, rgba(0,0,0,0) 100%); /* FF3.6+ */
+background: -webkit-gradient(linear, left top, right bottom, color-stop(0%,rgba(198,196,197,0.5)), color-stop(36%,rgba(127,125,126,0)), color-stop(100%,rgba(0,0,0,0))); /* Chrome,Safari4+ */
+background: -webkit-linear-gradient(-45deg,  rgba(198,196,197,0.5) 0%,rgba(127,125,126,0) 36%,rgba(0,0,0,0) 100%); /* Chrome10+,Safari5.1+ */
+background: -o-linear-gradient(-45deg,  rgba(198,196,197,0.5) 0%,rgba(127,125,126,0) 36%,rgba(0,0,0,0) 100%); /* Opera 11.10+ */
+background: -ms-linear-gradient(-45deg,  rgba(198,196,197,0.5) 0%,rgba(127,125,126,0) 36%,rgba(0,0,0,0) 100%); /* IE10+ */
+background: linear-gradient(135deg,  rgba(198,196,197,0.5) 0%,rgba(127,125,126,0) 36%,rgba(0,0,0,0) 100%); /* W3C */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#80c6c4c5', endColorstr='#00000000',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
+}
+
+#actualite{
+float:left;
+}
+
+#evenement{
+float:right;
+}
+
+#portlet-coordonnee,
+#calendrier,
+#faq,
+#plan{
+margin:-5px 0 20px -2px;
+padding-left:8px;
+min-height:150px;
+}
+
+#actualite h2,
+#evenement h2,
+#portlet-coordonnee h2,
+#calendrier h2,
+#faq h2,
+#plan h2{
+color:#9d0003;
+border-bottom:1px dotted #555;
+font-size:1em;
+margin:5px 0px 0px 0px;
+text-transform:uppercase;
+}
+
+#portlet-coordonnee p,
+#calendrier p,
+#faq p,
+#plan p{
+font-size:0.8em;
+}
+
+aside#right-column{
+float:right;
+width:280px;
+min-height:600px;
+border:1px solid #f00;
+}
+
+.section-col-droite{
+background: -moz-linear-gradient(-45deg,  rgba(198,196,197,0.5) 0%, rgba(127,125,126,0) 36%, rgba(0,0,0,0) 100%); /* FF3.6+ */
+background: -webkit-gradient(linear, left top, right bottom, color-stop(0%,rgba(198,196,197,0.5)), color-stop(36%,rgba(127,125,126,0)), color-stop(100%,rgba(0,0,0,0))); /* Chrome,Safari4+ */
+background: -webkit-linear-gradient(-45deg,  rgba(198,196,197,0.5) 0%,rgba(127,125,126,0) 36%,rgba(0,0,0,0) 100%); /* Chrome10+,Safari5.1+ */
+background: -o-linear-gradient(-45deg,  rgba(198,196,197,0.5) 0%,rgba(127,125,126,0) 36%,rgba(0,0,0,0) 100%); /* Opera 11.10+ */
+background: -ms-linear-gradient(-45deg,  rgba(198,196,197,0.5) 0%,rgba(127,125,126,0) 36%,rgba(0,0,0,0) 100%); /* IE10+ */
+background: linear-gradient(135deg,  rgba(198,196,197,0.5) 0%,rgba(127,125,126,0) 36%,rgba(0,0,0,0) 100%); /* W3C */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#80c6c4c5', endColorstr='#00000000',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
+}
+
+#coord-adresse,
+#coord-telephone,
+#coord-fax,
+#coord-email,
+#coord-heures-ouvertures{
+background-repeat:no-repeat;
+background-position:left center;
+padding-left:35px;
+height:30px;
+}
+
+#coord-adresse{
+background-image:url(../images/icone_maison.png);
+}
+
+#coord-telephone{
+background-image:url(../images/icone_telephone.png);
+line-height:30px;
+
+}
+
+#coord-fax{
+background-image:url(../images/icone_fax.png);
+line-height:30px;
+
+}
+
+#coord-email{
+background-image:url(../images/icone_enveloppe.png);
+line-height:30px;
+
+}
+
+#coord-heures-ouvertures{
+background-image:url(../images/icone_horloge.png);
+line-height:30px;
+}
+
+
+
+footer{
+margin-top:3px;
+background-color:#c3c3c3;
+border-radius:0px 0px 18px 18px;
+}
+
+
+#menu-inferieur{
+margin:auto;
+width:70%;
+}
+
+#menu-inferieur h2{
+font-size:1em;
+color:333;
+text-shadow:1px 1px 1px rgba(255,255,255,0.3);
+}
+
+
+#menu-inferieur li{
+display:block;
+list-style-type:none;
+background-image:url(../images/icone_fleche.png);
+background-repeat:no-repeat;
+background-position:left center;
+padding-left:18px;
+margin-left:0px;
+}
+
+#menu-inferieur li a{
+color:#555;
+font-size:0.7em;
+text-decoration:none;
+}
+
+#menu-inferieur li a:hover{
+text-decoration:underline;
+}
+
+.section-nav-inf{
+float:left;
+margin-right:80px;
+}
+
+footer nav#menu-inferieur ul,
+#menu-inferieur h2{
+margin:0px;
+padding:0px;
+}
+
+
+
+
+
+
+
