--- a/src/montoitfleurus/theme/static/css/style.css
+++ b/src/montoitfleurus/theme/static/css/style.css
@@ -209,7 +209,7 @@ border-bottom:1px dotted rgba(50,50,50,0.3);
 }
 
 
-#navigation-tab{
+#navigation-sup{
 width:894px;
 height:40px;
 border-bottom:2px solid #fcbf4a;
@@ -225,11 +225,11 @@ background: linear-gradient(to bottom,  rgba(125,126,125,1) 0%,rgba(14,14,14,1) 
 filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#7d7e7d', endColorstr='#0e0e0e',GradientType=0 ); /* IE6-9 */
 }
 
-nav#navigation-tab li{
-margin:0px 30px;
+#navigation-tab li{
 width:503px;
 height:40px;
-border:1px solid #fff;
+margin:0px 30px;
+line-height:38px;
 }
 
 #navigation-tab li a{
