Handle left portlet column This refs affinitic #5848

--- a/src/montoitfleurus/theme/static/css/style.css
+++ b/src/montoitfleurus/theme/static/css/style.css
@@ -333,6 +333,15 @@ text-transform:uppercase;
 }
 
 
+/*** COLONNE GAUCHE ***/
+aside#left-column{
+float:left;
+width:270px;
+min-height:600px;
+padding-top:5px;
+}
+
+
 /*** COLONNE DROITE ***/
 aside#right-column{
 float:right;
