--- a/src/montoitfleurus/theme/static/css/style.css
+++ b/src/montoitfleurus/theme/static/css/style.css
@@ -194,7 +194,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', end
 }
 
 #deco-sup{
-width:914px;
+width:915px;
 height:215px;
 background-image:url(../images/banner.jpg);
 background-repeat:no-repeat;
@@ -214,7 +214,7 @@ border-bottom:1px dotted rgba(50,50,50,0.3);
 }
 
 #navigation-sup{
-width:914px;
+width:915px;
 height:40px;
 border-bottom:2px solid #fcbf4a;
 margin-top:1px;
@@ -270,13 +270,16 @@ left:445px;
 #bloc-info-sup{
 position:relative;
 top:-13px;
-
+left:-4px;
+display:table;
+width:919px;
+border-collapse:separate;
+border-spacing:1px 0px;
 }
+
 .article-nav-sup{
-display: inline-block;
-margin:1px 1px 0px 1px;
-width:301px;
-min-height:200px;
+display: table-cell;
+width:306px;
 }
 
 .article-nav-sup p{
@@ -284,6 +287,27 @@ color:#fff;
 font-size:0.8em;
 padding:1em;
 }
+
+.article-nav-sup footer{
+position:absolute;
+bottom:0px;
+margin:5px 0px 0px 10px;
+width:285px;
+border-top:1px dotted #dcdcdc;
+border-radius:0px;
+background-color:transparent;
+}
+
+.article-nav-sup footer a{
+font-size:0.8em;
+color:#fcbf4a !important;
+text-align:right;
+}
+
+.article-nav-sup footer a:hover{
+color:#0ff !important;
+}
+
 
 #presentation-sup{
 background-color:#637e99;
