--- a/src/montoitfleurus/theme/static/css/style.css
+++ b/src/montoitfleurus/theme/static/css/style.css
@@ -66,6 +66,7 @@ background-attachment:fixed;
 width:1200px;
 min-height:700px;
 margin:auto;
+margin-bottom:50px;
 background-color:transparent;
 border-left:2px solid #555;
 border-right:2px solid #555;
@@ -153,8 +154,8 @@ text-align:center;
 
 hr#border-personal-tools{
 position:relative;
-top:-14px;
-left:900px;
+top:14px;
+left:716px;
 width:180px;
 margin:8px 0px 9px 0px;
 border: 0;
@@ -193,24 +194,24 @@ background: linear-gradient(to bottom,  rgba(255,255,255,1) 0%,rgba(246,246,246,
 filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#ededed',GradientType=0 ); /* IE6-9 */
 }
 
-#deco-sup{
-width:915px;
-height:215px;
-background-image:url(../images/banner.jpg);
-background-repeat:no-repeat;
-}
-
-#bloc-central{
+#main-content-left-bloc{
 float:left;
 width:917px;
 min-height:300px;
 border-right:1px solid #ddd;
 }
 
-#bloc-central h1{
+#main-content-left-bloc h1{
 font-size:1.8em;
 padding-bottom:5px;
 border-bottom:1px dotted rgba(50,50,50,0.3);
+}
+
+#deco-sup{
+width:915px;
+height:215px;
+background-image:url(../images/banner.jpg);
+background-repeat:no-repeat;
 }
 
 #navigation-sup{
@@ -229,24 +230,22 @@ background: linear-gradient(to bottom,  rgba(125,126,125,1) 0%,rgba(14,14,14,1) 
 filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#7d7e7d', endColorstr='#0e0e0e',GradientType=0 ); /* IE6-9 */
 }
 
-#navigation-tab li{
+#navigation-tab-theme li{
 width:503px;
 height:40px;
 margin:0px;
 line-height:38px;
 }
 
-#navigation-tab li a{
+#navigation-tab-theme li a{
 color:#fff;
 font-style:uppercase;
 font-size:1.1em;
 }
 
-
-#navigation-tab li a:hover{
+#navigation-tab-theme li a:hover{
 color:#fcbf4a;
 }
-
 
 #portaltab-presentation,
 #portaltab-devenir-locataire,
@@ -322,7 +321,6 @@ background-color:#7fa0c3;
 background-color:#93bae3;
 }
 
-
 #news-event{
 margin:15px 4px 15px 4px;
 }
@@ -362,13 +360,24 @@ margin:5px 0px 0px 0px;
 text-transform:uppercase;
 }
 
+#central-bloc{
+}
 
 /*** COLONNE GAUCHE ***/
 aside#left-column{
 float:left;
-width:270px;
+width:250px;
 min-height:600px;
 padding-top:5px;
+background-color:#819fc1;
+}
+
+
+/*** COLONNE CENTRALE ***/
+#content-text{
+float:right;
+width:660px;
+border:1px solid #00f;
 }
 
 
