Css : couleur lien navigation box

--- a/src/montoitfleurus/theme/skins/montoitfleurus_theme_styles/portal_custom.css
+++ b/src/montoitfleurus/theme/skins/montoitfleurus_theme_styles/portal_custom.css
@@ -41,7 +41,7 @@ margin-right: -1em;
 }
 
 aside#left-column dl.portlet.portletNavigationTree a{
-color: #666 !important;
+color: #b8f6ff !important;
 }
 
 aside#left-column dl.portlet.portletNavigationTree a:hover{
