Home Page : portlets actualité et agenda
- ajout des boutons ajouter et Plus..
- positionnement
- css
- liens

--- a/src/montoitfleurus/theme/skins/montoitfleurus_theme_styles/portal_custom.css
+++ b/src/montoitfleurus/theme/skins/montoitfleurus_theme_styles/portal_custom.css
@@ -1,4 +1,12 @@
 
+/*** GOOGLE PORLET***/
+.neVct-IlgHgd .OFA0We-haAclf,
+.i4ewOd-pzNkMb-haAclf{
+display:none !important;
+}
+
+
+
 
 
 /*** search engines ***/
